--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
     <button type="button" onclick="search()">Search</button>
   </form>
   <div id="result"></div>
+
   <script>
-    function search() {
+    async function search() {
       var searchTerm = document.getElementById('searchInput').value;
       if (searchTerm) {
-        // Proxy server URL (replace with your actual proxy server)
-        var proxyServer = 'https://dashboard.worksheetsforteachers.org/search?q=';
+        var targetWebsite = 'https://www.google.com
 
-        // Make an asynchronous request to the proxy server
-        fetch(proxyServer + encodeURIComponent(searchTerm))
-          .then(response => response.json())
-          .then(data => {
-            document.getElementById('result').innerHTML = `<p>Result: ${data.result}</p>`;
-          })
-          .catch(error => console.error('Error:', error));
+        try {
+          const response = await fetch(`https://cors-anywhere.herokuapp.com/${targetWebsite}/search?q=${encodeURIComponent(searchTerm)}`);
+          const data = await response.json();
+
+          document.getElementById('result').innerHTML = `<p>Result: ${data.result}</p>`;
+        } catch (error) {
+          console.error('Error:', error);
+        }
       }
     }
   </script>
