--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proxy Search</title>
+  <title>Proxy-Like Example</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,43 +11,30 @@
       margin: 20px;
     }
 
-    input {
-      padding: 8px;
-      font-size: 16px;
-    }
-
-    button {
-      padding: 8px 16px;
-      font-size: 16px;
-    }
-
-    #result {
-      margin-top: 20px;
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
-  <h1>Proxy Search</h1>
-  <form id="searchForm">
-    <input type="text" id="searchInput" placeholder="Enter search term">
-    <button type="button" onclick="search()">Search</button>
+  <h1>Proxy-Like Example</h1>
+
+  <form onsubmit="loadWebsite(); return false;">
+    <label for="websiteUrl">Enter Website URL:</label>
+    <input type="url" id="websiteUrl" placeholder="https://www.google.com" required>
+    <button type="submit">Load</button>
   </form>
-  <div id="result"></div>
+
+  <iframe id="embeddedFrame" src="" frameborder="0"></iframe>
 
   <script>
-    async function search() {
-      var searchTerm = document.getElementById('searchInput').value;
-      if (searchTerm) {
-        var targetWebsite = 'https://www.google.com
-
-        try {
-          const response = await fetch(`https://cors-anywhere.herokuapp.com/${targetWebsite}/search?q=${encodeURIComponent(searchTerm)}`);
-          const data = await response.json();
-
-          document.getElementById('result').innerHTML = `<p>Result: ${data.result}</p>`;
-        } catch (error) {
-          console.error('Error:', error);
-        }
+    function loadWebsite() {
+      const websiteUrl = document.getElementById('websiteUrl').value;
+      if (websiteUrl) {
+        const iframe = document.getElementById('embeddedFrame');
+        iframe.src = `https://cors-anywhere.herokuapp.com/${websiteUrl}`;
       }
     }
   </script>
