--- a/index.html
+++ b/index.html
@@ -3,18 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Proxy</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <title>Proxy Example</title>
 </head>
 <body>
-    <h1>Website Proxy</h1>
 
-    <label for="url">Enter Website URL:</label>
-    <input type="text" id="url" placeholder="https://example.com">
-    <button onclick="proxy()">Proxy</button>
+    <h2>Enter Website URL:</h2>
+    
+    <form id="urlForm">
+        <label for="websiteUrl">URL:</label>
+        <input type="text" id="websiteUrl" name="websiteUrl" required>
+        <button type="button" onclick="proxyContent()">Load Proxy</button>
+    </form>
 
-    <div id="proxyResult"></div>
+    <div id="proxyContainer"></div>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script>
+        function proxyContent() {
+            var url = document.getElementById("websiteUrl").value;
+
+            if (!url) {
+                alert('Please provide a URL.');
+                return;
+            }
+
+            fetch(url)
+                .then(response => response.text())
+                .then(content => {
+                    document.getElementById("proxyContainer").innerHTML = content;
+                })
+                .catch(error => {
+                    console.error('Error fetching content:', error);
+                    alert('Error fetching content. Please check the URL.');
+                });
+        }
+    </script>
+
 </body>
 </html>
